(Bernadette Schlonsok)
- SF patch #1490857  XHTML Compliance of 1.4 alpha 1
- minor changes for XHTML/WAI compliance of controlled vocabularies addon

(Dorothea Salo)
- SF patch #1544124 Remove admin email from contact info
- SF patch #1533133 Remove thumbnail filename from alt-text
- SF patch #1533114 Item title in HTML <title>

(Jeroen Ruigrok)
- SF patch #1549758 Make sure cleanup() doesn't fail with NullPointerException
- SF patch #1549867  Make cleanup() commit outstanding work every 100 iterations
- SF patch #1551876  removeBitstream() fails to update primary bitstream

(Flavio Botelho)
- SF patch #1529326 Bug in new code at QueryArgs with fixed typo in jsp/search/advanced.jsp
- SF patch #1529221 Treat wrong emails friendly

(Michael Judd)
- SF patch #1528040  Fixes minor bug in Harvest.java for Oracle users

(Stuart Lewis)
- SF patch #1543856 Statistics do not work in 1.4 - patch to fix SF bug #1543853
- SF patch #1541383 Browse-by-date and browse-by-title not working
- SF patch #1548020 robots.txt to limit bots navigating browse by subject
- SF patch #1556183  Missing title for news editor page
- SF patch #1556950 for SF bug #1556947 NPE when no user selected to del/edit
- SF patch #1561292 for SF bug #1554064
- SF patch #1563523 for SF bug #1548865 Browse errors on withdrawn item

(Mark Diggory)
- SF patch #1523824 robots.txt to limit bots navigating author and date pages
- SF patch #1547987 Small Messages.properties modification (change of DSpace copyright text)
- SF patch #1542830 Patch to limit Referer Spam capabilities

(Tim Donohue)
- SF patch #1550606  more configurable RSS feeds, also moves text to Messages.properties
- SF patch #1544829  fixes SF bug #1544807 Browse-by-Subject/Author paging mechanism broken
- SF patch #1543969  fixes SF bug #1543966 "Special" groups inside groups bug
- SF patch #1550161  Fix HttpServletRequest encoding issues in 1.4

(Jonathan Champ)