@@ -1,6 +1,8 @@
 (Bernadette Schlonsok)
 - SF patch #1490857  XHTML Compliance of 1.4 alpha 1
 - minor changes for XHTML/WAI compliance of controlled vocabularies addon
+(Larry Stone)
+- SF patch #1544273 improved sanity-checking of XSL-based ingest crosswalks
 
 (Dorothea Salo)
 - SF patch #1544124 Remove admin email from contact info
